# r1-interp

./: .gitignore  README.md  pyproject.toml  r1_interp_build_plan.md
configs/: autointerp.yaml  graph_generation.yaml  sweep_pilot.yaml  train_full.yaml
data/prompts/: benchmark_prompts.json
r1_interp/: __init__.py  config.py  model_registry.py  prompts.py  utils.py
results/features/labels/: labels_layer10.json  labels_layer11.json  labels_layer12.json  labels_layer13.json  labels_layer14.json  labels_layer15.json  labels_layer16.json  labels_layer17.json
results/graphs/json/: arithmetic_arith_01.json  arithmetic_arith_02.json  arithmetic_arith_03.json  arithmetic_arith_04.json  arithmetic_arith_05.json  factual_recall_fact_01.json  factual_recall_fact_02.json  graph-metadata.json  multihop_multi_01.json  multihop_multi_02.json  multihop_multi_03.json  multihop_multi_04.json  reasoning_reason_02.json  reasoning_reason_03.json  reasoning_reason_04.json
results/graphs/json/by_category/arithmetic/: arith_01.json  arith_02.json  arith_03.json  arith_04.json  arith_05.json
scripts/: autointerp.py  collect_activations.py  compare_models.py  convert_transcoders.py  eval_sweep.py  evaluate.py  generate_graphs.py  motif_analysis.py  prepare_data.py  setup_env.py  sweep.py  train.py
tests/: conftest.py  test_config.py  test_graph_compat.py  test_model_registry.py  test_prompts.py
